Update config.json  add logo

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "title":"Summer",
     "subTitle":"Blog all",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"logo.png",
     "GMEEK_VERSION":"last",
     "displayTitle":"Summer",
     "homeUrl":"http://sean-xia.github.io",
